--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+talloc (2.1.7-1~aurex1) xenial; urgency=medium
+
+  * Backport of talloc 2.1.7-1 from yakkety because samba 4.4.5 requires
+    talloc (>= 2.1.6~) as build-depend
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 26 Apr 2017 17:41:43 +0200
+
 talloc (2.1.7-1) unstable; urgency=medium
 
   * New upstream release.
